--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit
-sklearn
-pandas
-tensorflow
-matplotlib
-seaborn
-numpy
+streamlit==1.35.0
+pandas==2.2.2
+numpy==1.24.4
+matplotlib==3.7.1
+tensorflow==2.12.0
+
